// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultipleChoiceView > renders options with answers revealed 1`] = `
<div>
  <div>
    <div>
      <p>
        Choose one
      </p>
    </div>
    <div
      class="mt-3 space-y-2"
    >
      <div
        class="p-3 rounded-lg border border-gray-200 bg-white"
      >
        <div
          style="display: flex; gap: 0.75rem;"
        >
          <div
            style="display: flex; align-items: center; justify-content: center;"
          >
            A
          </div>
          <div
            class="flex-1 min-w-0"
          >
            <div
              class="text-sm text-gray-900"
            >
              <p>
                Option A
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="p-3 rounded-lg border border-green-300 bg-green-50"
      >
        <div
          style="display: flex; gap: 0.75rem;"
        >
          <div
            style="display: flex; align-items: center; justify-content: center;"
          >
            B
          </div>
          <div
            class="flex-1 min-w-0"
          >
            <div
              class="text-sm text-gray-900"
            >
              <p>
                Option B
              </p>
            </div>
          </div>
          <div
            class="ml-auto text-xs px-2 py-0.5 bg-green-600 text-white rounded"
          >
            正解
          </div>
        </div>
      </div>
      <div
        class="p-3 rounded-lg border border-gray-200 bg-white"
      >
        <div
          style="display: flex; gap: 0.75rem;"
        >
          <div
            style="display: flex; align-items: center; justify-content: center;"
          >
            C
          </div>
          <div
            class="flex-1 min-w-0"
          >
            <div
              class="text-sm text-gray-900"
            >
              <p>
                Option C
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultipleChoiceView > renders options without showing answers 1`] = `
<div>
  <div>
    <div>
      <p>
        Choose one
      </p>
    </div>
    <div
      class="mt-3 space-y-2"
    >
      <div
        class="p-3 rounded-lg border border-gray-200 bg-white"
      >
        <div
          style="display: flex; gap: 0.75rem;"
        >
          <div
            style="display: flex; align-items: center; justify-content: center;"
          >
            A
          </div>
          <div
            class="flex-1 min-w-0"
          >
            <div
              class="text-sm text-gray-900"
            >
              <p>
                Option A
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="p-3 rounded-lg border border-gray-200 bg-white"
      >
        <div
          style="display: flex; gap: 0.75rem;"
        >
          <div
            style="display: flex; align-items: center; justify-content: center;"
          >
            B
          </div>
          <div
            class="flex-1 min-w-0"
          >
            <div
              class="text-sm text-gray-900"
            >
              <p>
                Option B
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="p-3 rounded-lg border border-gray-200 bg-white"
      >
        <div
          style="display: flex; gap: 0.75rem;"
        >
          <div
            style="display: flex; align-items: center; justify-content: center;"
          >
            C
          </div>
          <div
            class="flex-1 min-w-0"
          >
            <div
              class="text-sm text-gray-900"
            >
              <p>
                Option C
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
